# SIMALI

./: LICENSE  README.md  build_easley.sh  multisac_35FOI_test.config  multisac_36FOI_test.config  multisac_36_FOI_biocomp.sh  multisac_FOI_runs_35.sh  slurm_hopper_2.sh  slurm_hopper_2_vir_10.sh  slurm_hopper_2_vir_100.sh  slurm_hopper_3.sh  slurm_hopper_5.sh  slurm_hopper_6_inflam_inf_100x.sh  slurm_hopper_6_inflam_inf_1by100.sh  slurm_hopper_6_virprod100x.sh  slurm_hopper_6_virprod_infectivity_lt_5x.sh  slurm_hopper_7.sh  slurm_hopper_8.sh  slurm_hopper_Tcell10.sh  slurm_hopper_Tcell11.sh  slurm_hopper_Tcell12.sh  slurm_hopper_Tcell9.sh  slurm_hopper_run6_a20i20.sh  slurm_hopper_run6_a5i20.sh  slurm_hopper_run6_inf10x.sh  slurm_hopper_run6_inf20x.sh  slurm_hopper_run6_inf2x.sh
Lung_tissue_variation/: covid_multisac_run6_all_difusion_1.config  covid_multisac_run6_inter_100x.config  covid_multisac_run6_inter_10x.config  covid_multisac_run6_inter_1by10.config  covid_multisac_run6_inter_1by100.config  covid_multisac_run6_inter_1by1000.config  covid_multisac_run6_inter_1by10000.config  covid_multisac_run6_inter_1by5.config  covid_multisac_run6_inter_5x.config  slurm_hopper_6_all_diffusion_1.sh  slurm_hopper_6_inflam_inter_100x.sh  slurm_hopper_6_inflam_inter_10x.sh  slurm_hopper_6_inflam_inter_1by10.sh  slurm_hopper_6_inflam_inter_1by100.sh  slurm_hopper_6_inflam_inter_1by1000.sh  slurm_hopper_6_inflam_inter_1by10000.sh  slurm_hopper_6_inflam_inter_1by5.sh  slurm_hopper_6_inflam_inter_5x.sh
configs/: covid_ba.config  covid_multisac.config  covid_multisac_3D_2.config  covid_multisac_run2.config  covid_multisac_run2_initial_vir_1.config  covid_multisac_run2_initial_vir_10.config  covid_multisac_run2_initial_vir_100.config  covid_multisac_run2_initial_vir_1000.config  covid_multisac_run2_initial_vir_500.config  covid_multisac_run5.config  covid_multisac_run6.config  covid_multisac_run6_Tcell10.config  covid_multisac_run6_Tcell11.config  covid_multisac_run6_Tcell12.config  covid_multisac_run6_Tcell8.config  covid_multisac_run6_Tcell9.config  covid_multisac_run6_a20i20.config  covid_multisac_run6_a5i20.config  covid_multisac_run6_a5i5.config  covid_multisac_run6_inf10x.config  covid_multisac_run6_inf20x.config  covid_multisac_run6_inf2x.config  covid_multisac_run6_inflam_inf_100x.config  covid_multisac_run6_vir_prod_1by100.config  covid_multisac_run6_virprod_infectivity_lt_10x.config  covid_multisac_run6_virprod_infectivity_lt_5x.config  covid_multisac_run7.config  covid_multisac_run8.config  dis_air_inf.sh  dis_air_inf_biocomp.sh  distributed_ran_air_infectable_1.config  distributed_ran_air_infectable_2.config  distributed_ran_air_infectable_3.config
hopper_slurms/: slurm_hopper_2_vir_1.sh  slurm_hopper_2_vir_1000.sh  slurm_hopper_2_vir_500.sh  slurm_hopper_3D_basic.sh  slurm_hopper_4.sh  slurm_hopper_6.sh  slurm_hopper_6_virprod_infectivity_lt_10x.sh  slurm_hopper_Tcell8.sh  slurm_hopper_run6_a5i5.sh
include/: tissue.hpp
infectivity_variation/: covid_multisac_run6_inflam_inf_10x.config  covid_multisac_run6_inflam_inf_1by10.config  covid_multisac_run6_inflam_inf_1by100.config  covid_multisac_run6_inflam_inf_1by5.config  covid_multisac_run6_inflam_inf_5x.config  slurm_hopper_6_inflam_inf_100x.sh  slurm_hopper_6_inflam_inf_10x.sh  slurm_hopper_6_inflam_inf_1by10.sh  slurm_hopper_6_inflam_inf_1by5.sh  slurm_hopper_6_inflam_inf_5x.sh
install/: LICENSE.txt
install/cmake/: UPCXX_UTILS-release.cmake  UPCXX_UTILS.cmake  UPCXX_UTILS_VERSION
install/include/upcxx_utils/: bin_hash.hpp  colors.h  flat_aggr_store.hpp  log.hpp  mem_profile.hpp  progress_bar.hpp  timers.hpp
src/: main.cpp  tissue.cpp
upcxx-utils/: .gitignore  CMakeLists.txt  LEGAL.txt
upcxx-utils/cmake/: UPCXX_UTILSConfig.cmake
upcxx-utils/include/: upcxx_utils.hpp
upcxx-utils/include/upcxx_utils/: heavy_hitter_streaming_store.hpp  split_rank.hpp  two_tier_aggr_store.hpp
upcxx-utils/src/: CMakeLists.txt  log.cpp  mem_profile.cpp  progress_bar.cpp  split_rank.cpp  timers.cpp  two_tier_aggr_store.cpp
upcxx-utils/test/: CMakeLists.txt  test_aggr_store.cpp  test_log.cpp  test_progress_bar.cpp  test_timers.cpp  test_upcxx_utils.cpp  test_version.cpp
variation_3_changes/: covid_multisac_run6_virprod_infectivity_lt_100x.config  covid_multisac_run6_virprod_infectivity_lt_1by100x.config  covid_multisac_run6_virprod_infectivity_lt_1by10x.config  covid_multisac_run6_virprod_infectivity_lt_1by5x.config  slurm_hopper_6_virprod_infectivity_lt_100x.sh  slurm_hopper_6_virprod_infectivity_lt_1by100x.sh  slurm_hopper_6_virprod_infectivity_lt_1by10x.sh  slurm_hopper_6_virprod_infectivity_lt_1by5x.sh
virion_production_variation/: covid_multisac_run6_vir_prod_100x.config  covid_multisac_run6_vir_prod_10x.config  covid_multisac_run6_vir_prod_1by10.config  covid_multisac_run6_vir_prod_1by5.config  covid_multisac_run6_vir_prod_5x.config  slurm_hopper_6_virprod10x.sh  slurm_hopper_6_virprod1by10.sh  slurm_hopper_6_virprod1by100.sh  slurm_hopper_6_virprod1by5.sh  slurm_hopper_6_virprod5x.sh
